Second commit – updated test1.html with additional content

--- a/my-project/test1.html
+++ b/my-project/test1.html
@@ -7,5 +7,6 @@
   <body>
     <h1>My Project</h1>
     <p>Created for Lab 1 - Exercise 6</p>
+    <p>Updated in Exercise 7 using Sync Changes</p>
   </body>
 </html>
